--- a/README
+++ b/README
@@ -36,7 +36,7 @@ SYNOPSIS
         on_connect_error => sub { die "Cannot connect - $_[0] failed $_[-1]\n"; },
      );
 
-     $loop->loop_forever;
+     $loop->run;
 
 DESCRIPTION
     This collection of modules allows programs to be written that perform
