--- a/README
+++ b/README
@@ -126,10 +126,8 @@ DESCRIPTION
 
     IO::Async::Loop::Select uses the `select(2)' syscall.
 
-    Other subclasses of loop may appear on CPAN under their own dists; such
-    as IO::Async::Loop::Glib which acts as a proxy for the `Glib::MainLoop'
-    of a Glib-based program, or IO::Async::Loop::Ppoll which uses the
-    IO::Ppoll object to handle signals safely on Linux.
+    Other subclasses of loop may appear on CPAN under their own dists; see
+    the SEE ALSO section below for more detail.
 
     As well as these general-purpose classes, the IO::Async::Loop
     constructor also supports looking for OS-specific subclasses, in case a
@@ -219,6 +217,35 @@ SUPPORT
 
     Support by IRC may also be found on irc.perl.org in the #io-async
     channel.
+
+SEE ALSO
+    As well as the two loops supplied in this distribution, many more exist
+    on CPAN. At the time of writing this includes:
+
+    *   IO::Async::Loop::AnyEvent - use IO::Async with AnyEvent
+
+    *   IO::Async::Loop::Epoll - use IO::Async with epoll on Linux
+
+    *   IO::Async::Loop::EV - use IO::Async with EV
+
+    *   IO::Async::Loop::Glib - use IO::Async with Glib or GTK
+
+    *   IO::Async::Loop::KQueue - use IO::Async with kqueue
+
+    *   IO::Async::Loop::Mojo - use IO::Async with Mojolicious
+
+    *   IO::Async::Loop::POE - use IO::Async with POE
+
+    *   IO::Async::Loop::Ppoll - use IO::Async with ppoll(2)
+
+    Additionally, some other event loops or modules also support being run
+    on top of `IO::Async':
+
+    *   AnyEvent::Impl::IOAsync - AnyEvent adapter for IO::Async
+
+    *   Gungho::Engine::IO::Async - IO::Async Engine
+
+    *   POE::Loop::IO_Async - IO::Async event loop support for POE
 
 AUTHOR
     Paul Evans <leonerd@leonerd.org.uk>
