--- a/README
+++ b/README
@@ -171,6 +171,24 @@ DESCRIPTION
     involving keeping a possibly-stateful co-routine running alongside the
     rest of an asynchronous program.
 
+  Tasks
+    A Task object represents a single outstanding action that is yet to
+    complete, such as a name resolution operation or a socket connection. It
+    stands in contrast to a `IO::Async::Notifier', which is an object that
+    represents an ongoing source of activity, such as a readable filehandle
+    of bytes or a POSIX signal.
+
+    Tasks are a recent addition to the `IO::Async' API and details are still
+    subject to change and experimentation. Currently a Task object is an
+    instance of CPS::Future, but it is possible this may change in future
+    (pardon the pun ;) ) to being some class within the `IO::Async::'
+    namespace, and having a reference to the containing Loop object.
+
+    In general, methods that support Tasks return a new Task object to
+    represent the outstanding operation. If callback functions are supplied
+    as well, these will be fired in addition to the Task object becoming
+    ready.
+
   Networking
     The IO::Async::Loop provides several methods for performing
     network-based tasks. Primarily, the `connect' and `listen' methods allow
