--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for IO-Async
 
+0.51_002 BUGFIXES:
+         * Removed use_ok() test of IO::Async::DetachedCode from t/00use.t
+
 0.51_001 CHANGES:
          * Initial attempt at Tasks using CPS::Future
          * Minor fixes to timer LoopTests to prevent spurious failures of
