Import of PEVANS/IO-Async-0.53 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.53
gitpan-cpan-path:         PEVANS/IO-Async-0.53.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for IO-Async
 
+0.53    CHANGES:
+         * Added IO_ASYNC_WATCHDOG debugging support
+
+        BUGFIXES:
+         * Remember to return a task from Function->call even if it's queued
+           (RT79248)
+
 0.52    CHANGES:
          * Initial attempt at Tasks using CPS::Future
          * Minor fixes to timer LoopTests to prevent spurious failures of
